--- a/core/service/pom.xml
+++ b/core/service/pom.xml
@@ -32,6 +32,11 @@
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 		</dependency>
+		
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-tx</artifactId>
+		</dependency>				
 	</dependencies>
 
 	<build>
