--- a/pom.xml
+++ b/pom.xml
@@ -182,6 +182,12 @@
 			    <version>${spring-version}</version>
 			</dependency>
 
+			<dependency>
+			    <groupId>org.springframework</groupId>
+			    <artifactId>spring-tx</artifactId>
+			    <version>${spring-version}</version>
+			</dependency>			
+
 	<!-- AOP related dependencies -->
 
 			<dependency>
