--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
 		<jetty-version>9.4.5.v20170502</jetty-version>
 		<servlet-version>3.1.0</servlet-version>
 		<spring-version>3.1.0.RELEASE</spring-version>
+		<spring-security-version>3.1.0.RELEASE</spring-security-version>
 		<datasource-version>1.4</datasource-version>
 		<aspectj-version>1.8.10</aspectj-version>
 		<cglib-version>3.1</cglib-version>
@@ -227,6 +228,31 @@
 				<artifactId>log4j</artifactId>
 				<version>${log4j-version}</version>
 			</dependency>
+
+	<!-- Spring Web Security Dependencies -->
+			<dependency>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-core</artifactId>
+				<version>${spring-security-version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-web</artifactId>
+				<version>${spring-security-version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-config</artifactId>
+				<version>${spring-security-version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-taglibs</artifactId>
+				<version>${spring-security-version}</version>
+			</dependency>			
 		</dependencies>
 	</dependencyManagement>
 
